# btrm

./: .envrc  .gitignore  .mailmap  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EMBEDDING.md  README.md  SERVICES.md  SKILL.md  SKILLS.md  UNSAFE.md  flake.nix  install.ps1  install.sh  process-compose.yml  rust-toolchain.toml  welcome
.agents/skills/: SKILLS.md
.agents/skills/blit-cli/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: coverage.yml  deploy-blit-hub.yml  deploy-blitz-signaling.yml  deploy-website.yml  dev-check.yml  prepare-release.yml  publish-demo-image.yml  release.yml  tag-release.yml  test.yml
alacritty-driver/: Cargo.toml
alacritty-driver/src/: lib.rs
browser/: Cargo.toml
browser/src/: lib.rs
cli/: Cargo.toml
cli/src/: agent.rs  interactive.rs  main.rs  transport.rs
config/fish/: config.fish
crates/alacritty-driver/: Cargo.toml
crates/alacritty-driver/src/: lib.rs
crates/blitz/: Cargo.toml
crates/blitz/src/: main.rs  peer.rs  server.rs  signaling.rs
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  interactive.rs  learn.md  main.rs  transport.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: imp.rs  lib.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: app.rs  atlas.rs  bsp.rs  connection.rs  input.rs  main.rs  overlay.rs  palette.rs  remotes.rs  renderer.rs  statusbar.rs  terminal.rs  transport.rs
crates/desktop/src/shaders/: glyph.wgsl  rect.wgsl
crates/fonts/: Cargo.toml
crates/fonts/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/remote/: Cargo.toml
crates/remote/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: ipc.rs  lib.rs  main.rs  pty.rs  surface_encoder.rs
crates/server/src/ipc/: ipc_unix.rs  ipc_windows.rs
crates/server/src/pty/: pty_unix.rs  pty_windows.rs
crates/webrtc-forwarder/: Cargo.toml
crates/webrtc-forwarder/src/: client.rs  ice.rs  lib.rs  main.rs  peer.rs  signaling.rs  turn.rs
crates/webserver/: Cargo.toml
crates/webserver/src/: config.rs  lib.rs
demo/: Cargo.toml
demo/src/: main.rs
docs/: paper.md
drafts/6together/: blog-post.md
drafts/claude/: blog-post.md
drafts/iter/: blog-post.md
drafts/openai/: blog-post.md
drafts/parrot/: blog-post.md
drafts/reaction/: blog-post.md
e2e/: package-lock.json  package.json  playwright.config.ts  start-servers.sh
e2e/tests/: assets.spec.ts  auth.spec.ts  cell-metrics.spec.ts  font-resolution.spec.ts  large-viewport.spec.ts  terminal.spec.ts
examples/: fd-channel-bun.ts  fd-channel-python.py
fonts/: Cargo.toml
fonts/src/: lib.rs
gateway/: Cargo.toml
gateway/src/: main.rs
js/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
js/blit-cloud/src/: index.ts
js/blit-hub/: Dockerfile  README.md  fly.toml  package.json
js/blit-hub/src/: index.ts
js/blitz/: README.md  fly.toml  package.json
js/blitz/src/: index.ts
js/core/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
js/core/src/: BlitConnection.ts  BlitSurfaceCanvas.ts  BlitTerminalSurface.ts  BlitWorkspace.ts  SurfaceStore.ts  TerminalStore.ts  TerminalView.ts  gl-renderer.ts  index.ts  keyboard.ts  protocol.ts  types.ts
js/react/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
js/react/src/: BlitConnection.ts  BlitContext.tsx  BlitSurfaceView.tsx  BlitTerminal.tsx  index.ts  protocol.ts  types.ts
js/solid/: package.json  tsconfig.json  vitest.config.ts
js/solid/src/: BlitContext.tsx  BlitSurfaceView.tsx  BlitTerminal.tsx  hooks.ts  index.ts
js/ui/: package.json  tsconfig.json  vite.config.ts
js/ui/src/: App.tsx  FontOverlay.tsx  HelpOverlay.tsx  Overlay.tsx  PaletteOverlay.tsx  StatusBar.tsx  SwitcherOverlay.tsx  Workspace.tsx  createFontLoader.ts  createKeyboardShortcuts.ts  createMetrics.ts  i18n.ts  main.tsx  storage.ts  theme.ts
js/web-app/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
js/web-app/src/: App.tsx  DisconnectedOverlay.tsx  FontOverlay.tsx  HelpOverlay.tsx  Overlay.tsx  PaletteOverlay.tsx  StatusBar.tsx  SwitcherOverlay.tsx  Workspace.tsx  i18n.ts  main.tsx  passphrase-crypto.ts  storage.ts  theme.ts  useMetrics.ts  wasm.ts  webrtc-share.ts
js/website/: astro.config.ts  index.html  package-lock.json  package.json  prerender.js  tsconfig.json  vite.config.ts
js/website/src/: Landing.tsx  Terminal.tsx  entry-server.tsx  landing.css  main.tsx  theme.tsx  virtual-blit-wasm.d.ts
libs/react/: package.json  tsconfig.json
libs/react/src/: BlitTerminal.tsx  gl-renderer.ts  keyboard.ts  palettes.ts  types.ts
libs/web-app/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
libs/web-app/src/: App.tsx  (+7 more)
man/: blit-gateway.1.scd  blit-server.1.scd  blit-webrtc-forwarder.1.scd  blit.1.scd
nix/: common.nix  darwin-module.nix  nixos-module.nix  packages.nix  tasks.nix
npm/: Cargo.toml
npm/src/: lib.rs
patches/: alacritty_terminal-0.25.1-emoji-width.patch
react/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
react/src/: BlitConnection.ts  BlitContext.tsx  BlitTerminal.tsx  BlitWorkspace.ts  TerminalStore.ts  gl-renderer.ts  index.ts  keyboard.ts  palettes.ts  protocol.ts  types.ts
remote/: Cargo.toml
remote/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
systemd/: blit.service  blit.socket  blit@.service  blit@.socket
ts/blitz-signaling/: README.md  tsconfig.json
web/: index.html
web-app/: index.html  package-lock.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web-app/src/: App.tsx  DisconnectedOverlay.tsx  ExposeOverlay.tsx  FontOverlay.tsx  HelpOverlay.tsx  Overlay.tsx  PaletteOverlay.tsx  StatusBar.tsx  SwitcherOverlay.tsx  Workspace.tsx  i18n.ts  main.tsx  storage.ts  styles.ts  theme.ts  useMetrics.ts
webserver/: Cargo.toml
webserver/src/: lib.rs
wezterm-driver/: Cargo.toml
wezterm-driver/src/: lib.rs
(+116 files in other folders)
