[workspace]
resolver = "2"
members = [
    "remote",
    "alacritty-driver",
    "server",
    "gateway",
    "browser",
    "demo",
    "cli",
    "fonts",
    "webserver",
]

[workspace.package]
license = "MIT"
repository = "https://github.com/indent-com/blit"
homepage = "https://blit.sh"

[workspace.dependencies]
blit-remote = { version = "0.11.3", path = "remote" }
blit-alacritty = { version = "0.11.3", path = "alacritty-driver" }
blit-fonts = { version = "0.11.3", path = "fonts" }
blit-webserver = { version = "0.11.3", path = "webserver" }

[profile.release]
opt-level = "s"
lto = true
