[workspace]
resolver = "2"
members = [
    "crates/remote",
    "crates/alacritty-driver",
    "crates/server",
    "crates/gateway",
    "crates/browser",
    "crates/demo",
    "crates/cli",
    "crates/fonts",
    "crates/webserver",
]

[workspace.package]
license = "MIT"
repository = "https://github.com/indent-com/blit"
homepage = "https://blit.sh"

[workspace.dependencies]
blit-remote = { version = "0.13.0", path = "crates/remote" }
blit-alacritty = { version = "0.13.0", path = "crates/alacritty-driver" }
blit-fonts = { version = "0.13.0", path = "crates/fonts" }
blit-webserver = { version = "0.13.0", path = "crates/webserver" }

[profile.release]
opt-level = "s"
lto = true
