[package]
name = "blit-browser"
version = "0.9.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
blit-remote = { path = "../remote" }
rustc-hash = "2"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Window",
]
