[package]
name = "blit-browser"
version = "0.11.2"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
blit-remote = { workspace = true }
rustc-hash = "2"
wasm-bindgen = "=0.2.114"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Window",
]
