[package]
name = "blit-cli"
version = "0.7.3"
edition = "2021"

[[bin]]
name = "blit"
path = "src/main.rs"

[dependencies]
blit-remote = { path = "../remote" }
blit-fonts = { path = "../fonts" }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
rand = "0.8"
