[package]
name = "blit-cli"
version = "0.11.2"
edition = "2021"
description = "blit terminal client"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "blit"
path = "src/main.rs"

[dependencies]
blit-remote = { workspace = true }
blit-webserver = { workspace = true }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
rand = "0.10"
