[package]
name = "blit-demo"
version = "0.5.1"
edition = "2024"

[dependencies]
blit-remote = { path = "../remote" }
libc = "0.2"
vt100 = "0.16"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.7.0"
netlink-packet-sock-diag = { version = "0.4.2", features = ["rich_nlas"] }
netlink-packet-utils = "0.5.2"
netlink-sys = "0.8.8"
