[package]
name = "blit-gateway"
version = "0.12.2"
edition = "2021"
description = "blit WebSocket/WebTransport gateway"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
blit-webserver = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
web-transport-quinn = { version = "0.11", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"
ring = "0.17"
rustls-pemfile = "2"
rustls-pki-types = "1"
time = "0.3"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
