[package]
name = "btrm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
vt100 = "0.16"
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode"] }
libc = "0.2"
