[package]
name = "blit-alacritty"
version = "0.14.0"
edition = "2021"
description = "Alacritty terminal emulator driver for blit"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
blit-remote = { workspace = true }
alacritty_terminal = "0.25"
regex = "1"
