[package]
name = "blitz"
version = "0.13.1"
edition = "2021"
description = "Share a terminal session via WebRTC"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "blitz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
ureq = "3"
