[package]
name = "blit-cli"
version = "0.16.3"
edition = "2021"
description = "blit terminal client"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "blit"
path = "src/main.rs"

[dependencies]
blit-remote = { workspace = true }
blit-webserver = { workspace = true }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
rand = "0.10"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
blit-server = { workspace = true }
blit-webrtc-forwarder = { workspace = true }
uuid = { version = "1", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
