[package]
name = "blit-server"
version = "0.13.1"
edition = "2021"
description = "blit terminal multiplexer server"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
blit-remote = { workspace = true }
blit-alacritty = { workspace = true }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
memchr = "2"
