[package]
name = "blit-server"
version = "0.17.1"
edition.workspace = true
description = "blit terminal multiplexer server"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "blit_server"
path = "src/lib.rs"

[dependencies]
blit-remote = { workspace = true }
blit-alacritty = { workspace = true }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
memchr = "2"
