[package]
name = "blit-webserver"
version = "0.16.0"
edition = "2021"
description = "Embedded web server for blit"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
blit-fonts = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["sync", "time"] }
futures-util = "0.3"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
percent-encoding = "2"
